# AmberParser

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  appveyor.yml  header.hpp  main.cpp
AmberParser/: CMakeLists.txt  main.cpp
AmberParser/BuildGeneration/: Attributes.hpp  CMakeListsTemplate.hpp  RegistrationFile.cpp  RegistrationFile.hpp  RegistrationWrittable.cpp  RegistrationWrittable.hpp  TypeRegistration.cpp  TypeRegistration.hpp
AmberParser/Helpers/: CursorHelpers.hpp  FileHelper.cpp  FileHelper.hpp
AmberParser/Parser/: Parser.cpp  Parser.h
AmberParser/ParsingData/: AttributeData.hpp  BaseDescriptor.cpp  BaseDescriptor.hpp  CompoundDescriptor.cpp  CompoundDescriptor.hpp  FieldDescriptor.cpp  FieldDescriptor.hpp  MethodDescriptor.cpp  MethodDescriptor.hpp  TranslationUnitDescriptor.cpp  TranslationUnitDescriptor.hpp
AmberParserTests/: CMakeLists.txt
AmberParserTests/ResultFiles/: BaseClass  CustomCtorClass  DifferentCompounds  TemplateBase
AmberParserTests/TestFiles/: BaseClass.hpp  CustomCtorClass.hpp  DifferentCompounds.hpp  NothingToGenerate.hpp  TemplateBase.hpp
AmberParserTests/src/: ParserOutputTests.cpp
AmberParserTool/: CMakeLists.txt
AmberParserTool/src/: Config.cpp  Config.hpp  FileUtils.cpp  FileUtils.hpp  Filewatch.cpp  Filewatch.hpp  main.cpp
BuildGeneration/: Attributes.hpp  RegistrationFile.cpp  RegistrationFile.hpp  RegistrationWritter.cpp  RegistrationWritter.hpp  TypeRegistration.cpp  TypeRegistration.hpp
Helpers/: CursorHelpers.cpp  FileHelper.cpp
Parser/: Parser.cpp  Parser.h
ParsingData/: BaseDescriptor.cpp  BaseDescriptor.hpp  ClassDescriptor.cpp  ClassDescriptor.h  ClassDescriptor.hpp  CompoundDescriptor.cpp  CompoundDescriptor.hpp  FieldDescriptor.cpp  FieldDescriptor.h  FieldDescriptor.hpp  FileDescriptor.h  FileDescriptor.hpp  NamespaceDescriptor.cpp  NamespaceDescriptor.h  NamespaceDescriptor.hpp  StructDescriptor.cpp  StructDescriptor.hpp  TranslationUnitDescriptor.cpp  TranslationUnitDescriptor.hpp
TestFiles/: BaseClass.hpp
Tests/: CMakeLists.txt
Tests/src/: ParserOutputTests.cpp
